# pricer

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IDEAS.md  README.md  TODO.md  cat_gemini_analysis.json  pyproject.toml  test_scraping.py  test_setup.py  test_vision_tool.py
.claude/: settings.local.json
agent/: main.py
examples/1/: details.md
examples/ebay_training_set/: details.txt
lib/: __init__.py
lib/analyzers/: __init__.py  gemini.py  openai.py  vision.py
lib/browseapi/: ORIGINAL_LICENSE.txt  README.MD  __init__.py  client.py  containers.py  exceptions.py
lib/browseapi/tests/: test_client.py  test_data.json
lib/database/: __init__.py  ebay_db.py
lib/scrapers/: ebay.py  ebay2.py  ebay3.py
logs/ebay_api_researcher/: ebay_analysis_1751649940.json  ebay_analysis_1751649983.json  ebay_analysis_1751650125.json  ebay_analysis_1751651247.json  ebay_analysis_1751651548.json  ebay_analysis_1751736989.json  ebay_analysis_1751813249.json  ebay_analysis_1751813269.json
logs/ebay_image_lookup/: ebay_image_lookup_cat_20250706_111249.json  ebay_image_lookup_cat_20250706_111416.json  ebay_image_lookup_front_20250706_111307.json  ebay_image_lookup_front_20250706_111322.json  ebay_image_lookup_front_20250706_111335.json  ebay_image_lookup_front_20250706_111355.json
logs/gemini_analyzer/: cat_gemini_analysis_1751044307.json
logs/openai_analyzer/: cat_openai_analysis_1751816956.json  cat_openai_analysis_1751818230.json
scripts/: README.md  ai_pricing_engine.py  ebay_api_researcher.py  ebay_image_lookup.py  gemini_analyzer.py  image_analyzer.py  image_analyzer.py.bak  openai_analyzer.py  price_researcher.py  query_database.py  test_database.py
scripts/logs/: README.md  cat_analysis.json  cat_gemini_analysis.json  price_analysis_1750832725.json
scripts/logs/old_files/: price_analysis_1750889700.json  price_analysis_1750889967.json  price_analysis_1750890038.json  price_analysis_1750890151.json  price_analysis_1750890309.json  price_analysis_1750890762.json  price_analysis_1750890866.json
scripts/tests/: test_scraping.py  test_setup.py
test_server/: server.py
tests/: test-cases.md
tools/: __init__.py  amazon_searcher.py  base.py  ebay_researcher.py  file_system.py  gemini_analyzer.py  openai_analyzer.py  vision_analyzer.py
