[project]
name = "pickprice"
version = "0.1.0"
description = "Visual product pricing tool for resellers"
requires-python = ">=3.9"
dependencies = [
    "google-cloud-vision>=3.4.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.5",
    "google-genai>=1.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ["py39"]
