[project]
name = "pickprice"
version = "0.1.0"
description = "Visual product pricing tool for resellers"
requires-python = ">=3.9"
dependencies = [
    "google-cloud-vision>=3.4.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.5",
    "google-genai>=1.21.1",
    "anthropic>=0.55.0",
    "aiohttp>=3.12.13",
    "dotenv>=0.9.9",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

# Enable specific rule sets
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# Ignore specific rules if needed
lint.ignore = [
    "E501",  # Line too long (let formatter handle it)
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pre-commit>=4.2.0",
]
