[project]
name = "pickprice"
version = "0.1.0"
description = "Visual product pricing tool for resellers"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-vision>=3.4.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.5",
    "google-genai>=1.21.1",
    "anthropic>=0.55.0",
    "aiohttp>=3.12.13",
    "dotenv>=0.9.9",
    "pre-commit>=4.2.0",
    "openai>=1.93.0",
    "amazon-product-search-v2>=0.1.1",
    "parsel>=1.10.0",
    "httpx[http2]>=0.28.1",
    "uvicorn>=0.36.0",
    "fastapi>=0.117.1",
]

[tool.ruff]
line-length = 88
target-version = "py310"

# Enable specific rule sets
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "UP007" # non-pep604-annotation-union
]

# Ignore specific rules if needed
lint.ignore = [
    "E501",  # Line too long (let formatter handle it)
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pre-commit>=4.2.0",
]
